fix(integrations)[#181]: map install callback errors
fixes #181
